--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/training
 
 # drop and create the database at startup (use `update` to only update the schema)
 
+quarkus.http.cors=true
+quarkus.http.origins=*
+quarkus.http.headers=accept, authorization, content-type, x-requested-with
+quarkus.http.methods=GET, OPTIONS
