add search and sort

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/training
 quarkus.http.cors=true
 quarkus.http.origins=*
 quarkus.http.headers=accept, authorization, content-type, x-requested-with
-quarkus.http.methods=GET, OPTIONS
+quarkus.http.methods=GET, OPTIONS, PUT, POST, DELETE
